# Theotex

./: pyproject.toml  requirements.txt  setup.py
src/theotex/: __init__.py  __main__.py  logs.py  navigation.py  urls.py  util.py
tests/: test_navigation.py
theotex/: __init__.py  __main__.py  logs.py  navigation.py  setup.py  urls.py
theotex/tests/: test_navigation.py
